--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -13,7 +13,7 @@
     </head>
     
     <body>
-        <div class="cover" style="background-image: url('http://36.media.tumblr.com/5a5d276a85c2368be3d71cf56e45e248/tumblr_n479w8bPSd1sftw41o2_1280.jpg');">
+        <div class="cover" style="background-image: url('images/cover.png');">
             <div class="navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
