--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -41,11 +41,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 text-center">
-                        <h1>Heading</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisici eli.</p>
-                        <br>
-                        <br>
-                        <a class="btn btn-lg btn-default">Click me</a>
+                        <h1>Teaching Kids to Code</h1>
+                        <p>ESETEC 6223: Issues and Practices in Educational Technology
+                            <br>
+                            <br>Sheng-Bo Chen
+                            <br>April 21, 2015</p>
                     </div>
                 </div>
             </div>
@@ -55,8 +55,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe class="embed-responsive-item" src="http://www.youtube.com/embed/i__1Z5a9Sak"
-                            allowfullscreen=""></iframe>
+                            <iframe src="https://embed-ssl.ted.com/talks/mitch_resnick_let_s_teach_kids_to_code.html"
+                            allowfullscreen="" frameborder="0" scrolling="no" webkitallowfullscreen=""
+                            mozallowfullscreen=""></iframe>
                         </div>
                     </div>
                 </div>
