--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -13,7 +13,9 @@
     </head>
     
     <body>
-        <div class="cover" style="background-image: url('images/cover.png');">
+        <div class="cover" style="background-image: url('images/cover.png');background-repeat:no-repeat;
+background-size:contain;
+background-position:center; hight: 300px;">
             <div class="navbar navbar-default">
                 <div class="container">
                     <div class="navbar-header">
