--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -13,92 +13,39 @@
     </head>
     
     <body>
-        <!-- Fixed navbar -->
-        <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="navbar navbar-default navbar-static-top">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                    data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-ex-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Project name</a>
+                    <a class="navbar-brand" href="#">ESETEC 6223: Sheng-Bo's Final Project&nbsp;</a>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
+                <div class="collapse navbar-collapse" id="navbar-ex-collapse">
+                    <ul class="nav navbar-nav navbar-right">
                         <li class="active">
                             <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#about">About</a>
-                        </li>
-                        <li>
-                            <a href="#contact">Contact</a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                            aria-expanded="false">Dropdown <span class="caret"></span></a>
-                            <ul class="dropdown-menu" role="menu">
-                                <li>
-                                    <a href="#">Action</a>
-                                </li>
-                                <li>
-                                    <a href="#">Another action</a>
-                                </li>
-                                <li>
-                                    <a href="#">Something else here</a>
-                                </li>
-                                <li class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li>
-                                    <a href="#">Separated link</a>
-                                </li>
-                                <li>
-                                    <a href="#">One more separated link</a>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a href="../navbar/">Default</a>
-                        </li>
-                        <li>
-                            <a href="../navbar-static-top/">Static top</a>
-                        </li>
-                        <li class="active">
-                            <a href="./">Fixed top <span class="sr-only">(current)</span></a>
+                            <a href="#">Contacts</a>
                         </li>
                     </ul>
                 </div>
-                <!--/.nav-collapse -->
-            </div>
-        </nav>
-        <div class="container">
-            <!-- Main component for a primary marketing message or call to action
-            -->
-            <div class="jumbotron">
-                <h1>Navbar example</h1>
-                <p>This example is a quick exercise to illustrate how the default, static
-                    and fixed to top navbar work. It includes the responsive CSS and HTML,
-                    so it also adapts to your viewport and device.</p>
-                <p>To see the difference between static and fixed top navbars, just scroll.</p>
-                <p>
-                    <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">View navbar docs »</a>
-                </p>
             </div>
         </div>
-        <!-- /container -->
         <div class="section">
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://embed-ssl.ted.com/talks/mitch_resnick_let_s_teach_kids_to_code.html"
-                            allowfullscreen="" frameborder="0" scrolling="no" webkitallowfullscreen=""
-                            mozallowfullscreen=""></iframe>
+                        <div class="jumbotron" style="height: 500px; background-image: url('images/cover.png'); background-position:center;background-size:100%;">
+                            <h1 class="text-center">Teaching Kids to Code</h1>
+                            <p class="text-center">ESETEC 6223: Issues and Practices in Educational Technology&nbsp;
+                                <br>Sheng-Bo Chen
+                                <br>April 21, 2015</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
