--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -51,6 +51,19 @@
                 </div>
             </div>
         </div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="embed-responsive embed-responsive-16by9">
+                            <iframe src="https://embed-ssl.ted.com/talks/mitch_resnick_let_s_teach_kids_to_code.html"
+                            frameborder="0" scrolling="no" webkitallowfullscreen="" mozallowfullscreen=""
+                            allowfullscreen=""></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
