--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="jumbotron" style="height: 500px; background-image: url('images/cover.png'); background-position:center;background-size:100%;">
+                        <div class="jumbotron" style=" background-image: url('images/cover.png'); background-position:center;background-size:100%;">
                             <h1 class="text-center">Teaching Kids to Code</h1>
                             <p class="text-center">ESETEC 6223: Issues and Practices in Educational Technology&nbsp;
                                 <br>Sheng-Bo Chen
