--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -27,7 +27,10 @@
                 <div class="collapse navbar-collapse" id="navbar-ex-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active">
-                            <a href="#">Home</a>
+                            <a href="#top">Cover</a>
+                        </li>
+                        <li>
+                            <a href="#resnick">Resnick's Speech</a>
                         </li>
                         <li>
                             <a href="#">Contacts</a>
@@ -51,6 +54,7 @@
                 </div>
             </div>
         </div>
+        <a name="resnick"></a>
         <div class="section">
             <div class="container">
                 <div class="row">
