--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -32,7 +32,7 @@
                             <a href="#top">Cover</a>
                         </li>
                         <li>
-                            <a href="resnick">Resnick's Speech</a>
+                            <a href="#resnick">Resnick's Speech</a>
                         </li>
                     </ul>
                 </div>
