--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -69,6 +69,21 @@
                 </div>
             </div>
         </div>
+        <div class="section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Introduction</h2>
+                        <p>MIT Scratch is a easy-to-use authoring tool for creating multimedia projects.
+                            It uses colorful blocks to represent programming syntaxes. The purpose
+                            of it is not to teach kindergarten kids how to code, but cultivate creative
+                            thinking and problem-solving skills. It was developed by the Lifelong Kindergarten
+                            group at MIT Media Lab led by Mitchel Resnick.</p>
+                        <h2>Why Should Kids be Taught How to Code?</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 
 </html>
