--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -74,12 +74,25 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Introduction</h2>
-                        <p>MIT Scratch is a easy-to-use authoring tool for creating multimedia projects.
-                            It uses colorful blocks to represent programming syntaxes. The purpose
-                            of it is not to teach kindergarten kids how to code, but cultivate creative
-                            thinking and problem-solving skills. It was developed by the Lifelong Kindergarten
-                            group at MIT Media Lab led by Mitchel Resnick.</p>
+                        <p contenteditable="true">MIT Scratch is a easy-to-use authoring tool for creating multimedia projects
+                            and was developed by the Lifelong Kindergarten group at MIT Media Lab led
+                            by Mitchel Resnick. It uses colorful blocks to represent programming syntaxes.
+                            The aims of it are not only to teach kindergarten kids how to code, but
+                            cultivate creative thinking and problem-solving skills.&nbsp;
+                            <br>
+                            <br>The purpose of my project is mainly to state my postion about kids should
+                            be taught how to code, review the history of educational programming languages
+                            for kids.</p>
                         <h2>Why Should Kids be Taught How to Code?</h2>
+                        <p>Mitch Resnick argued that:</p>
+                        <ol>
+                            <li>coding is not necessary to be “coding” literally</li>
+                            <li>calling young people the “digital natives” is skeptic because although
+                                they have experiences with new technologies, they are still not familiar
+                                with using the technologies to create things. In one word, you can read
+                                does not mean you are capable of being a writer. Therefore, He advocates
+                                that kids should be taught how to code.</li>
+                        </ol>
                     </div>
                 </div>
             </div>
