--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -51,6 +51,9 @@
                                 <br>April 21, 2015</p>
                             <p></p>
                         </div>
+                        <p class="text-center">
+                            <a href="http://blog.code.org/post/83529953038/students-learning-to-code-with-code-org-in">Source: http://blog.code.org/</a>
+                        </p>
                     </div>
                 </div>
             </div>
@@ -74,19 +77,19 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h2>Introduction</h2>
-                        <p contenteditable="true">MIT Scratch is a easy-to-use authoring tool for creating multimedia projects
+                        <p>MIT Scratch is a easy-to-use authoring tool for creating multimedia projects
                             and was developed by the Lifelong Kindergarten group at MIT Media Lab led
                             by Mitchel Resnick. It uses colorful blocks to represent programming syntaxes.
                             The aims of it are not only to teach kindergarten kids how to code, but
                             cultivate creative thinking and problem-solving skills.&nbsp;
                             <br>
-                            <br>The purpose of my project is mainly to state my postion about kids should
-                            be taught how to code, review the history of educational programming languages
-                            for kids.</p>
+                            <br>The purpose of my project is mainly to review the history of educational
+                            programming languages for kids. A statement about my position that whether
+                            or not kids should be taught how to code will be made too.</p>
                         <h2>Why Should Kids be Taught How to Code?</h2>
                         <p>Mitch Resnick argued that:</p>
                         <ol>
-                            <li>coding is not necessary to be “coding” literally</li>
+                            <li>coding is not necessary to be “coding” literally.</li>
                             <li>calling young people the “digital natives” is skeptic because although
                                 they have experiences with new technologies, they are still not familiar
                                 with using the technologies to create things. In one word, you can read
