--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -34,6 +34,15 @@
                         <li>
                             <a href="#resnick">Resnick's Speech</a>
                         </li>
+                        <li>
+                            <a href="#resnick">Introduction</a>
+                        </li>
+                        <li>
+                            <a href="#resnick">Why</a>
+                        </li>
+                        <li>
+                            <a href="#resnick">Issues</a>
+                        </li>
                     </ul>
                 </div>
                 <!--/.nav-collapse -->
@@ -52,7 +61,8 @@
                             <p></p>
                         </div>
                         <p class="text-center">
-                            <a href="http://blog.code.org/post/83529953038/students-learning-to-code-with-code-org-in">Source: http://blog.code.org/</a>
+                            <a href="http://blog.code.org/post/83529953038/students-learning-to-code-with-code-org-in"
+                            target="_blank">Image source: http://blog.code.org/</a>
                         </p>
                     </div>
                 </div>
@@ -95,6 +105,13 @@
                                 with using the technologies to create things. In one word, you can read
                                 does not mean you are capable of being a writer. Therefore, He advocates
                                 that kids should be taught how to code.</li>
+                        </ol>
+                        <h2>Issues for Beginners</h2>
+                        <ol>
+                            <li>Interfaces of IDE (Integrated development environment ) are Complicated.</li>
+                            <li>Non graphical approaches are not intuitive. (text-based, flowcharts…)</li>
+                            <li>Basic English proficiencies are needed for non-native speakers, especially
+                                east Asian language speakers (Chinese, Japanese, and Korean).</li>
                         </ol>
                     </div>
                 </div>
