--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -86,7 +86,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Introduction</h2>
+                        <h2>1. Introduction</h2>
                         <p>MIT Scratch is a easy-to-use authoring tool for creating multimedia projects
                             and was developed by the Lifelong Kindergarten group at MIT Media Lab led
                             by Mitchel Resnick. It uses colorful blocks to represent programming syntaxes.
@@ -96,7 +96,7 @@
                             <br>The purpose of my project is mainly to review the history of educational
                             programming languages for kids. A statement about my position that whether
                             or not kids should be taught how to code will be made too.</p>
-                        <h2>Why Should Kids be Taught How to Code?</h2>
+                        <h2>2. Why Should Kids be Taught How to Code?</h2>
                         <p>Mitch Resnick argued that:</p>
                         <ol>
                             <li>coding is not necessary to be “coding” literally.</li>
@@ -106,16 +106,69 @@
                                 does not mean you are capable of being a writer. Therefore, He advocates
                                 that kids should be taught how to code.</li>
                         </ol>
-                        <h2>Issues for Beginners</h2>
+                        <h2>3. Issues for Beginners</h2>
                         <ol>
                             <li>Interfaces of IDE (Integrated development environment ) are Complicated.</li>
                             <li>Non graphical approaches are not intuitive. (text-based, flowcharts…)</li>
                             <li>Basic English proficiencies are needed for non-native speakers, especially
                                 east Asian language speakers (Chinese, Japanese, and Korean).</li>
                         </ol>
+                        <h3>3.1 Interfaces of IDE (Integrated development environment ) are Complicated</h3>
+                        <div
+                        class="row">
+                            <div class="col-md-6">
+                                <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
+                                class="img-responsive">
+                            </div>
+                            <div class="col-md-6">
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                    ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
+                                    dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+                                    nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                                    Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
+                                    enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
+                                    felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
+                                    elementum semper nisi.</p>
+                            </div>
                     </div>
+                    <h3>3.2 Non Graphical Approaches are Not Intuitive</h3>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
+                            class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
+                                dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+                                nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                                Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
+                                enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
+                                felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
+                                elementum semper nisi.</p>
+                        </div>
+                    </div>
+                    <h3>3.3 Basic English Proficiencies are Needed for Non-native Speakers</h3>
+                    <div
+                    class="row">
+                        <div class="col-md-6">
+                            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
+                            class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
+                                ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis
+                                dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
+                                nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.
+                                Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In
+                                enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum
+                                felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
+                                elementum semper nisi.</p>
+                        </div>
                 </div>
             </div>
+        </div>
+        </div>
         </div>
     </body>
 
