--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -148,7 +148,7 @@
                                 elementum semper nisi.</p>
                         </div>
                     </div>
-                    <h3>3.3 Basic English Proficiencies are Needed for Non-native Speakers</h3>
+                    <h3 contenteditable="true">Basic English Proficiencies are Needed for Non-native Speakers</h3>
                     <div
                     class="row">
                         <div class="col-md-6">
@@ -165,6 +165,11 @@
                                 felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
                                 elementum semper nisi.</p>
                         </div>
+                </div>
+                <br>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="http://embed.verite.co/timeline/?source=0Av9NsjotIcmpdDRoLVJfYlJiQkp1U0xoREl0Y2JzS1E&amp;font=Bevan-PotanoSans&amp;maptype=toner&amp;lang=en&amp;hash_bookmark=true#0"
+                    allowfullscreen=""></iframe>
                 </div>
             </div>
         </div>
