--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet" type="text/css">
     </head>
     
-    <body>
+    <body data-spy="scroll">
         <!-- Fixed navbar -->
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
