--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -12,7 +12,7 @@
         rel="stylesheet" type="text/css">
     </head>
     
-    <body data-spy="scroll">
+    <body>
         <!-- Fixed navbar -->
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
@@ -117,8 +117,7 @@
                         <div
                         class="row">
                             <div class="col-md-6">
-                                <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
-                                class="img-responsive">
+                                <img src="../esetec6223/images/3.1.png" class="img-responsive">
                             </div>
                             <div class="col-md-6">
                                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
@@ -134,8 +133,7 @@
                     <h3>3.2 Non Graphical Approaches are Not Intuitive</h3>
                     <div class="row">
                         <div class="col-md-6">
-                            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
-                            class="img-responsive">
+                            <img src="../esetec6223/images/3.2.png" class="img-responsive">
                         </div>
                         <div class="col-md-6">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
@@ -148,12 +146,11 @@
                                 elementum semper nisi.</p>
                         </div>
                     </div>
-                    <h3 contenteditable="true">Basic English Proficiencies are Needed for Non-native Speakers</h3>
+                    <h3>3.3 Basic English Proficiencies are Needed for Non-native Speakers</h3>
                     <div
                     class="row">
                         <div class="col-md-6">
-                            <img src="http://pingendo.github.io/pingendo-bootstrap/assets/placeholder.png"
-                            class="img-responsive">
+                            <img src="../esetec6223/images/3.3.png" class="img-responsive">
                         </div>
                         <div class="col-md-6">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo
@@ -165,13 +162,19 @@
                                 felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus
                                 elementum semper nisi.</p>
                         </div>
+                </div>Feelings
+                <div class="row">
+                    <div class="col-md-12">
+                        <img src="images/smash.gif" class="img-responsive" style="margin: auto;">
+                    </div>
                 </div>
-                <br>
-                <div class="embed-responsive embed-responsive-16by9">
+                <h3>4. Timeline of Educational Programming Languages for Children</h3>
+                <div
+                class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="http://embed.verite.co/timeline/?source=0Av9NsjotIcmpdDRoLVJfYlJiQkp1U0xoREl0Y2JzS1E&amp;font=Bevan-PotanoSans&amp;maptype=toner&amp;lang=en&amp;hash_bookmark=true#0"
                     allowfullscreen=""></iframe>
-                </div>
             </div>
+        </div>
         </div>
         </div>
         </div>
