--- a/ESETEC6223/index.html
+++ b/ESETEC6223/index.html
@@ -62,7 +62,7 @@
                         </div>
                         <p class="text-center">
                             <a href="http://blog.code.org/post/83529953038/students-learning-to-code-with-code-org-in"
-                            target="_blank">Image source: http://blog.code.org/</a>
+                            target="_blank">Image source: blog.code.org/</a>
                         </p>
                     </div>
                 </div>
